fix sidemenu and dialog overflow

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -14,6 +14,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 2em;
+  overflow: auto;
 }
 
 .nav-menu {
